<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pratilipi</string>
    <string name="english">ENGLISH</string>
    <string name="hindi">HINDI</string>
    <string name="hindi_locale">हिन्दी</string>
    <string name="tamil">TAMIL</string>
    <string name="tamil_locale">தமிழ்</string>
    <string name="gujarati">GUJARATI</string>
    <string name="gujarati_locale">ગુજરાતી</string>
    <string name="blank"></string>
    <string name="error_system_issue">Something went wrong and we are sorry for that. Please try again later</string>
    <string name="choose_language">Choose Language</string>
    <string name="go">GO</string>
    <string name="dont_worry">Don\'t worry you can change it later</string>
    <string name="view_all">View All</string>
    <string name="home">HOME</string>
    <string name="categories">CATEGORIES</string>
    <string name="featured_books">Featured Books</string>
    <string name="new_releases">New Releases</string>
    <string name="classics">Classics</string>
    <string name="horror">Horror</string>
    <string name="poems">Poems</string>
    <string name="romance">Romance</string>
    <string name="stories">Stories</string>
    <string name="ghazals">Ghazals</string>
    <string name="content_language">CONTENT LANGUAGE</string>
    <string name="menu_language">MENU LANGUAGE</string>
    <string name="reset_content_language">Reset Content Language</string>
    <string name="reset_menu_language">Reset Menu Language</string>
    <string name="about">About Pratilipi</string>
    <string name="search">Search</string>
    <string name="search_hint">Title/ Author</string>
    <string name="shelf">Shelf</string>
    <string name="profile">Profile</string>
    <string name="free">FREE!</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="filter">FILTER</string>
    <string name="empty_message">OOPS! There are no result for the search query</string>
    <string name="loading">Loading...</string>
    <string name="read">READ</string>
    <string name="buy_now">BUY NOW</string>
    <string name="read_sample">READ SAMPLE</string>
    <string name="review">REVIEW</string>
    <string name="reader">Reader</string>
    <string name="add_to_shelf">ADD TO SHELF</string>
    <string name="change_font">Change font</string>
    <string name="bookmark">Bookmark</string>
    <string name="index">Index</string>
    <string name="oops_no_books_found">OOPS!!\nNo books found.\nAdd more books to find them here.</string>

    <string name="addasShortcutTitle">Add Shortcut</string>
    <string name="popupaction1">Remove</string>
    <string name="remove_from_shelf_dialog">Are you sure you want to remove this book from your shelf ?</string>
    <string name="remove_from_shelf_title">Remove from Shelf ?</string>
    <string name="remove_from_shelf_positive">Yes</string>
    <string name="cancel">Cancel</string>


</resources>
