<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.pratilipi.android.widget.PTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:text="@string/choose_language"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_small"
            app:textStyle="light" />

        <com.pratilipi.android.widget.PButton
            android:id="@+id/hindi_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector_red"
            android:text="@string/hindi_locale"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_large"
            app:textStyle="hindi" />

        <com.pratilipi.android.widget.PButton
            android:id="@+id/tamil_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector_red"
            android:text="@string/tamil_locale"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_large"
            app:textStyle="tamil" />

        <com.pratilipi.android.widget.PButton
            android:id="@+id/gujarati_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector_red"
            android:text="@string/gujarati_locale"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_large"
            app:textStyle="gujarati" />
    </LinearLayout>

    <com.pratilipi.android.widget.PButton
        android:id="@+id/go_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/button_selector_green"
        android:text="@string/go"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_large"
        app:textStyle="bold" />

    <com.pratilipi.android.widget.PTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/dont_worry"
        android:textColor="@color/text_gray"
        app:textStyle="light" />

</LinearLayout>