<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/blank"
                    android:scaleType="fitXY" />

                <com.pratilipi.android.widget.PTextView
                    android:id="@+id/title_text_view"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/image_view"
                    android:layout_gravity="center"
                    android:background="@color/background_transparent_gray"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_xsmall" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <com.pratilipi.android.widget.PTextView
                    android:id="@+id/title_en_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_medium"
                    app:textStyle="regular" />

                <com.pratilipi.android.widget.PTextView
                    android:id="@+id/author_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/background_dark_gray"
                    android:textSize="@dimen/text_xsmall"
                    app:textStyle="regular" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="@style/PRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:rating="3.2" />

                    <com.pratilipi.android.widget.PTextView
                        android:id="@+id/star_count_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#5544FF"
                        android:textSize="@dimen/text_xsmall"
                        app:textStyle="regular" />
                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fillViewport="true"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/genre_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />
                </HorizontalScrollView>

                <com.pratilipi.android.widget.PTextView
                    android:id="@+id/free_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/free"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_large"
                    app:textStyle="regular" />

                <LinearLayout
                    android:id="@+id/price_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <com.pratilipi.android.widget.PTextView
                        android:id="@+id/mrp_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/text_small"
                        app:textStyle="rupee" />

                    <com.pratilipi.android.widget.PTextView
                        android:id="@+id/selling_price_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_red"
                        android:textSize="@dimen/text_large"
                        app:textStyle="rupee" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <com.pratilipi.android.widget.PTextView
                android:id="@+id/read_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/background_green"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/read"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_xsmall"
                app:textStyle="regular" />

            <com.pratilipi.android.widget.PTextView
                android:id="@+id/buy_now_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/background_green"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/buy_now"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_xsmall"
                app:textStyle="regular" />

            <com.pratilipi.android.widget.PTextView
                android:id="@+id/read_sample_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/background_gray"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/read_sample"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_xsmall"
                app:textStyle="regular" />

            <com.pratilipi.android.widget.PTextView
                android:id="@+id/review_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/background_gray"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/review"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_xsmall"
                app:textStyle="regular" />
        </LinearLayout>

        <com.pratilipi.android.widget.PTextView
            android:id="@+id/summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>

</ScrollView>